# gpu4pyscf

./: .clangd  setup.py
examples/: 41-multigrid_dft.py
examples/multi_grid/: 16water.py  32water.py  64water.py  8water.py  Cu_mof.py  Cu_mof_dehyd.cif  benchmark.py  diamond.py  neon.py  test.py  water.py
examples/multi_grid/water_cluster/: 1024.xyz  2048.xyz  32.xyz  4096.xyz  512.xyz  batch.py
examples/pbc/df/: fft.py
gpu4pyscf/grad/: rhf.py
gpu4pyscf/lib/: CMakeLists.txt  cusolver.py
gpu4pyscf/lib/aft/: CMakeLists.txt  cartesian.cuh  constant_objects.cuh  drivers.cu  evaluation.cuh  screen.cu  utils.cuh
gpu4pyscf/lib/gint/: cuda_alloc.cuh
gpu4pyscf/lib/gpbc/: CMakeLists.txt  multi_grid.cu
gpu4pyscf/lib/gpbc/multi_grid/: cartesian.cuh  drivers.cu  evaluation.cuh  gradient.cuh  screening.cuh
gpu4pyscf/lib/gvhf/: nr_jk_driver.cu
gpu4pyscf/lib/multigrid/aft/: cartesian.cuh
gpu4pyscf/lib/multigrid/multigrid_v2/: evaluation.cuh  screening.cuh  utils.cuh
gpu4pyscf/mpi/: __init__.py
gpu4pyscf/pbc/df/: fft.py  fft_jk.py
gpu4pyscf/pbc/dft/: aft.py  krks.py  multi_grid.py  multi_grid_contraction.py  multi_grid_store_ao.py  multigrid.py  multigrid_v2.py  numint.py  rks.py  uks.py
gpu4pyscf/pbc/dft/multi_grid/: muligrid_pair.py  multi_grid.py
gpu4pyscf/pbc/grad/: rhf.py
gpu4pyscf/pbc/scf/: khf.py  rhf.py
gpu4pyscf/qmmm/pbc/: exact.py  itrf.py  mm_mole.py
gpu4pyscf/scf/: diis.py  hf.py
scripts/: aft.wl
